--- a/www/src/components/App.css
+++ b/www/src/components/App.css
@@ -40,6 +40,12 @@
 .tx-table-container {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.page-container {
+  background-color: aliceblue;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
